fix z-index in cookies

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,7 @@
     --purple: #343a40;
     --red: #c3bba7;
     position: fixed;
+    z-index: 10;
     right: 30px;
     bottom: 30px;
     max-width: 390px;
